use system property instead of LD_LIBRARY_PATH